src/test/deca/syntax/valid/created/if_floating.deca
{
	if(a = 2 + 5){
		printlnx("fds");
	}
}
