src/test/deca/syntax/invalid/created/faux40.deca
{
	string s = "fdsfs

fds
fdsf
sdf
s
";
}
